# face_alignment

./: CMakeLists.txt  FaceAligner.cpp  FaceAligner2.cpp  FaceAligner2.hpp  Helpers.cpp  Main.cpp  Main2.cpp  README.md  prueba.cpp  prueba4.txt
CVUI/: CMakeLists.txt  cvui.cpp  showmanyimages.cpp
